# blip_new

./: .dockerignore  .env.local.example  .gitignore  ACCOUNT_CREATION_GUIDE.md  APPLY_MIGRATION_NOW.sh  BALANCE_FIXES.md  BLIP_MONEY_TECHNICAL_DOCUMENTATION.md  Blip-Money-Complete-Documentation.html  CLAUDE.md  CRITICAL_ISSUES_FIX_GUIDE.md  DEPLOY_RUNBOOK.md  Dockerfile  LOCALHOST_TEST_GUIDE.md  PHASE2_COMPLETE.md  PROJECT_MAP.md  RUN_RAILWAY_MIGRATION.md  SAED_SETUP.md  SERVICES.md  SINR_MINTING_GUIDE.md  START.md  SYNC.md  check_merchant.js  complete_order.js  create_order.js  ecosystem.config.cjs  fix_stuck_orders.js  india_crypto.csv  india_crypto_all.xlsx  india_forex.csv  india_noise.csv  india_other.csv  nixpacks.toml  p2p_flow.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  start-all.sh  test-bot.js
.next/: trace  (+1 more)
blip_escrow/programs/blip_protocol_v2/: Cargo.toml
blip_escrow/programs/blip_protocol_v2/src/: lib.rs
blip_escrow/programs/blip_protocol_v2/src/errors/: mod.rs
blip_escrow/programs/blip_protocol_v2/src/events/: mod.rs
blip_escrow/programs/blip_protocol_v2/src/instructions/: accept_trade.rs  cancel_trade_mutual.rs  close_trade.rs  confirm_payment.rs  create_and_fund.rs  create_lane.rs  create_trade.rs  emergency_refund_v2.rs  extend_escrow.rs  fund_escrow.rs  fund_lane.rs  initialize_config.rs  lock_escrow.rs  match_offer.rs  match_offer_and_lock_from_lane.rs  mod.rs  open_dispute.rs  refund_escrow.rs  release_escrow.rs  resolve_dispute.rs  resolve_dispute_timeout.rs  set_arbiters.rs  update_config.rs  withdraw_lane.rs
(+1891 files in other folders)
