[package]
name = "blip_protocol_v2"
version = "2.0.0"
description = "Blip Protocol v2 - Hardened settlement layer with fee enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blip_protocol_v2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-program = "2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
